# libleaf

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  defconfig.conf  leaf.h
derive/: .gitignore  Cargo.toml
derive/src/: lib.rs
doc/: README.md  leaf.sql
doc/db/: README.md  fs_storage.md  table_definitions.sql
src/: actions.rs  config.rs  db.rs  download.rs  error.rs  index.rs  leaf.rs  lib.rs  mirror.rs  package.rs  pbar.rs  util.rs
src/config/: alter.rs  callbacks.rs  config_file.rs  dirs.rs  ensure_config.rs  files.rs
src/db/: fsentries.rs  packages.rs  reg.rs  tables.rs
src/error/: ext.rs
src/package/: installed.rs  local.rs  packageref.rs  remote.rs
src/util/: dependencies.rs  extract.rs  fs.rs  hash.rs  transaction.rs
