[package]
name = "libleaf"
version = "0.1.0"
edition = "2021"

[lib]
name = "leaf"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
indicatif = "0.17.3"
once_cell = "1.17.1"
curl = "0.4.44"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tar = "0.4.38"
xz = "0.1.0"
md-5 = "0.10.5"
base16ct = "0.2.0"
threadpool = "1.8.1"
derive = { path = "./derive" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
