[package]
name = "libleaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = "0.2.0"
curl = "0.4.44"
indicatif = "0.17.7"
log = "0.4.20"
md-5 = "0.10.6"
once_cell = "1.18.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tar = "0.4.40"
xz = "0.1.0"
